// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button includes icon as self closing tag, a11y text provided via icon alt 1`] = `
<button
  className="Button2465625684__root Button2465625684---iconPos-3-end Button2465625684---tone-1-1 Button2465625684---variant-1-4 Button2465625684---vol-1-3"
  data-testid="button-data-testid"
>
  <svg
    aria-hidden={true}
    className="Icon2050503392__root"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <path
      d="M14 7h-5v-5h-2v5h-5v2h5v5h2v-5h5v-2z"
    />
  </svg>
  <span
    className="visuallyHidden930791739__root"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;

exports[`Button includes icon, divider and children 1`] = `
<button
  className="Button2465625684__root Button2465625684---iconPos-3-end Button2465625684---tone-1-1 Button2465625684---variant-1-1 Button2465625684---vol-1-3"
  data-testid="button-data-testid"
>
  <svg
    aria-hidden={true}
    className="Icon2050503392__root"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <path
      d="M14 7h-5v-5h-2v5h-5v2h5v5h2v-5h5v-2z"
    />
  </svg>
  <span
    className="Button2465625684__divider"
  />
  <span
    className="Button2465625684__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;

exports[`Button renders as an anchor providing custom component via 'as' and 'to' props 1`] = `
<a
  className="Button2465625684__root Button2465625684---tone-1-1 Button2465625684---variant-1-1 Button2465625684---vol-1-3"
  data-testid="button-data-testid"
  href="/internal-link"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <span
    className="Button2465625684__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</a>
`;

exports[`Button renders correctly as a basic anchor link via 'as' and 'to' props 1`] = `
<a
  className="Button2465625684__root Button2465625684---tone-1-1 Button2465625684---variant-1-1 Button2465625684---vol-1-3"
  data-testid="button-data-testid"
  href="http://shelley.earth"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <span
    className="Button2465625684__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</a>
`;

exports[`Button renders correctly as a basic button 1`] = `
<button
  className="Button2465625684__root Button2465625684---tone-1-1 Button2465625684---variant-1-1 Button2465625684---vol-1-3"
  data-testid="button-data-testid"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <span
    className="Button2465625684__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;

exports[`Button renders with stylable state prop overrides, tone, variant, vol and fullwidth 1`] = `
<button
  className="Button2465625684__root Button2465625684--fullWidth Button2465625684---tone-1-6 Button2465625684---variant-1-6 Button2465625684---vol-1-6"
  data-testid="button-data-testid"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <span
    className="Button2465625684__inner"
  >
    I love big buttons and I cannot lie...
  </span>
</button>
`;
